# SISTEMA_GESTAO_ESTOQUE_INFRA

./: .dockerignore  .env-exemple  .env.exemple  .gitignore  Dockerfile  README.md  create_superuser.py  docker-compose.yml  gunicorn_conf.py  pyproject.toml  requirements.txt
app/: settings.py
nginx/: nginx.conf
supplier/: forms.py
